src/css/settings.css
#privacy-choices #privacy-choices-settings {
    height: 100%;
    width: 400px;
    background: #222222;
    padding: 20px;
}

#privacy-choices #privacy-choices-settings p {
    margin-bottom: 20px;
}

#privacy-choices #privacy-choices-settings #privacy-choices-settings-header {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    margin-bottom: 20px;
}

#privacy-choices #privacy-choices-settings #privacy-choices-settings-content .privacy-choices-settings-divider {
    margin: 0;
    height: 1px;
    background: #ffffff;
}

#privacy-choices #privacy-choices-settings #privacy-choices-settings-content #privacy-choices-settings-bulk {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    margin-bottom: 20px;
}

#privacy-choices #privacy-choices-settings #privacy-choices-settings-content .privacy-choices-category-header {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    margin-top: 20px;
    margin-bottom: 20px;
}

